Add service layer with service for each table entity change repository release

--- a/DefaultMessager/DefaultMessager.csproj
+++ b/DefaultMessager/DefaultMessager.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DefaultMessager.DAL\DefaultMessager.DAL.csproj" />
+    <ProjectReference Include="..\DefaultMessager.Service\DefaultMessager.Service.csproj" />
   </ItemGroup>
 
 </Project>
