--- a/DefaultMessager/DefaultMessager.csproj
+++ b/DefaultMessager/DefaultMessager.csproj
@@ -8,6 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DefaultMessager.DAL\DefaultMessager.DAL.csproj" />
     <ProjectReference Include="..\DefaultMessager.Service\DefaultMessager.Service.csproj" />
   </ItemGroup>
