add registration and Authentication after registration with jwt token add Registration view

--- a/DefaultMessager/appsettings.json
+++ b/DefaultMessager/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWTSettings": {
+    "SecretKey": "jwts-learning-kjdfkjbfjbfj32242353jkdbgfkmfgk5445tjk5445ggfpogbg",
+    "Issuer": "MyApiToken",
+    "Audience": "MyClient"
+  }
 }
