--- a/DefaultMessager.Service/DefaultMessager.Service.csproj
+++ b/DefaultMessager.Service/DefaultMessager.Service.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="JWT" Version="10.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DefaultMessager.DAL\DefaultMessager.DAL.csproj" />
     <ProjectReference Include="..\DefaultMessager.Domain\DefaultMessager.Domain.csproj" />
   </ItemGroup>
