--- a/DefaultMessager.DAL/DefaultMessager.DAL.csproj
+++ b/DefaultMessager.DAL/DefaultMessager.DAL.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.S3" Version="3.7.103.15" />
     <PackageReference Include="Mapster" Version="7.3.0" />
     <PackageReference Include="Mapster.Async" Version="2.0.0" />
     <PackageReference Include="Mapster.Core" Version="1.2.0" />
