--- a/DefaultMessager.DAL/DefaultMessager.DAL.csproj
+++ b/DefaultMessager.DAL/DefaultMessager.DAL.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.S3" Version="3.7.103.15" />
+    <PackageReference Include="Backblaze.Agent" Version="1.0.1" />
+    <PackageReference Include="Backblaze.Client" Version="1.0.1" />
     <PackageReference Include="Mapster" Version="7.3.0" />
     <PackageReference Include="Mapster.Async" Version="2.0.0" />
     <PackageReference Include="Mapster.Core" Version="1.2.0" />
