add drop zone on chenge avatar in profile view

--- a/DefaultMessager/DefaultMessager.csproj
+++ b/DefaultMessager/DefaultMessager.csproj
@@ -33,4 +33,11 @@
     <None Include="Views\Post\_posts.cshtml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\js\DropZone.js">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
