--- a/DefaultMessager/appsettings.json
+++ b/DefaultMessager/appsettings.json
@@ -10,5 +10,8 @@
     "SecretKey": "jwts-learning-kjdfkjbfjbfj32242353jkdbgfkmfgk5445tjk5445ggfpogbg",
     "Issuer": "MyApiToken",
     "Audience": "MyClient"
+  },
+  "ConnectionStrings": {
+    "NpgConnectionString": ""
   }
 }
