--- a/DefaultMessager/Dockerfile
+++ b/DefaultMessager/Dockerfile
@@ -25,7 +25,7 @@ RUN dotnet publish "DefaultMessager.csproj" -c Release -o /app/publish /p:UseApp
 RUN dotnet dev-certs https --trust
 
 FROM base AS final
-ENV ConnectionStrings__NpgConnectionString="User Id=postgres; Password=Mqesz<\-3H-M%o`]; Server=35.234.253.113; Port=5432; Database=Messager; IntegratedSecurity=true; Pooling=true;"
+ENV ConnectionStrings__NpgConnectionString="User Id=postgres; Password=defmes; Server=35.234.253.113; Port=5432; Database=Messager; IntegratedSecurity=true; Pooling=true;"
 WORKDIR /app
 COPY --from=publish /app/publish .
 COPY --from=publish /root/.dotnet/corefx/cryptography/x509stores/my/* /root/.dotnet/corefx/cryptography/x509stores/my/
