--- a/DefaultMessager/appsettings.json
+++ b/DefaultMessager/appsettings.json
@@ -13,5 +13,9 @@
   },
   "ConnectionStrings": {
     "NpgConnectionString": ""
+  },
+  "BackblazeClientOptions": {
+    "AccsesKey": "a8ac046ab51b",
+    "SecretKey": "00557c23045634e8bbf6aa733c3d8dd3a2bc38fa8b"
   }
 }
